--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -83,7 +83,7 @@
 }
 
 .container {
-	background: url(/public/Background.png);
+	background: url(/Background.png);
 	height: 100%;
 	background-size: 129.5em;
 	background-position-x: center;
